src/k8s/webappserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webappserver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webappserver
  template:
    metadata:
      labels:
        app: webappserver
    spec:
      containers:
        - name: webappserver
          image: <docker-hub-id>/webappserverimage:latest

# kubectl apply -f webappserver-deployment.yaml
# kubectl get deployments
# kubectl get pods
# kubectl delete deployment webappserver-deployment
