src/k8s/webappserver-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webappserver-nodeport-service
spec:
  type: NodePort
  selector:
    app: webappserver
  ports:
    - name: webappserver
      protocol: TCP
      port: 80
      targetPort: 80

########################################

# kubectl apply -f webappserver-nodeport-service.yaml

# kubectl get services
# kubectl delete service webappserver-nodeport-service
